Nettoyage du code, suppression des classes inutiles sur les listes.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem officia harum ad minus ipsum dignissimos deserunt eius dolores voluptatum vero, placeat voluptate iure alias aliquid. Adipisci repellendus laudantium necessitatibus accusantium!</p>
         <ul>
-            <li class="liste" id="premier">premier élément de liste</li>
-            <li class="liste" id="deuxieme">deuxieme élement de liste</li>
+            <li>premier élément de liste</li>
+            <li>deuxieme élement de liste</li>
         </ul>
         <ol>
-            <li class="liste1" id="element1">Premier élement de liste ordonnée</li>
-            <li class="liste1" id="element2">Deuxieme element</li>
+            <li>Premier élement de liste ordonnée</li>
+            <li>Deuxieme element</li>
         </ol>
 
         <img src="assets/images/image.jpg" alt="texte descriptif de mon image">
